--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,8 +10,10 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" <!-- Google Stylsheets -->
-    <link href="https://fonts.googleapis.com/css?family=Righteous|Roboto" rel="stylesheet">
+
+    <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"> -->
+     <!-- Google Stylsheets -->
+    <!-- <link href="https://fonts.googleapis.com/css?family=Righteous|Roboto" rel="stylesheet"> -->
   
     <title>hmny</title>
     <!--
